--- a/CMakeCPackOptions.cmake.in
+++ b/CMakeCPackOptions.cmake.in
@@ -249,6 +249,14 @@ if("${CPACK_GENERATOR}" STREQUAL "WIX")
   set(CPACK_WIX_UI_REF "CMakeUI_InstallDir")
 
   set(CPACK_WIX_PATCH_FILE
-    "@CMake_SOURCE_DIR@/Utilities/Release/WiX/patch.xml"
+    "@CMake_SOURCE_DIR@/Utilities/Release/WiX/patch_path_env.xml"
   )
+
+  set(BUILD_QtDialog "@BUILD_QtDialog@")
+
+  if(BUILD_QtDialog)
+    list(APPEND CPACK_WIX_PATCH_FILE
+      "@CMake_SOURCE_DIR@/Utilities/Release/WiX/patch_desktop_shortcut.xml"
+    )
+  endif()
 endif()
