CTestCustom: Suppress -Wshadow warning about Solaris 'single' typedef
On Solaris the system `/usr/include/floatingpoint.h` header contains

 typedef float single;

so the GNU compiler warns that uses of the name `single` shadow it.
Just suppress the warning because our uses of this name would become
less readable with a different name.

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -21,6 +21,7 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
   "Utilities.cmcurl"
   "Utilities.cmexpat."
   "Utilities.cmlibarchive"
+  "warning: declaration of .single. shadows a global declaration"
   "/usr/include.*warning.*shadowed declaration is here"
   "/usr/bin/ld.*warning.*-..*directory.name.*bin.*does not exist"
   "Redeclaration of .send..... with a different storage class specifier"
