--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -22,7 +22,7 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
   "Utilities.cmexpat."
   "Utilities.cmlibarchive"
   "warning: declaration of .single. shadows a global declaration"
-  "/usr/include.*warning.*shadowed declaration is here"
+  "/usr/include.*(warning|note).*shadowed declaration is here"
   "/usr/bin/ld.*warning.*-..*directory.name.*bin.*does not exist"
   "Redeclaration of .send..... with a different storage class specifier"
   "is not used for resolving any symbol"
